try to fix text color not showing on safari

--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ button {
 button {
   font-size: 1.2rem;
   padding: 1rem;
+  color: #000;
 }
 
 button:hover {
